--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Start a new To-Do list</h1>
-    <form method="POST">
+    <form method="POST" action="{% url 'lists:new_list' %}">
         <input name="item_text" id="id_new_item" placeholder="Enter a To-Do item" />
         {% csrf_token %}
     </form>
