--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>To-Do lists</title>
-</head>
-<body>
-    <h1>Your To-Do list</h1>
-    <form method="POST" action="{% url 'lists:add_item' list.id %}">
-        <input name="item_text" id="id_new_item" placeholder="Enter a To-Do item" />
-        {% csrf_token %}
-    </form>
+{% extends 'base.html' %}
+
+{% block header_text %}Your To-Do list{% endblock %}
+
+{% block form_action %}{% url 'lists:add_item' list.id %}{% endblock %}
+
+{% block table %}
     <table id="id_list_table">
         {% for item in list.item_set.all %}
             <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
