--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -34,5 +34,7 @@
             </div>
         </div>
     </div>
+    <script src="{% static "js/jquery.js" %}"></script>
+    <script src="{% static "js/list.js" %}"></script>
 </body>
 </html>
