--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -13,15 +13,17 @@
     <div class="container">
         <nav class="navbar navbar-default" role="navigation">
             <a class="navbar-brand" href="/">Superlists</a>
-            {% if user.email %}
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'lists:my_lists' user.email %}">My lists</a></li>
-                </ul>
-                <a class="btn navbar-btn navbar-right" id="id_logout" href="{% url 'accounts:logout' %}">Log out</a>
-                <span class="navbar-text navbar-right">Logged in as {{ user.email }}</span>
-            {% else %}
-                <a class="btn navbar-btn navbar-right" id="id_login" href="#">Sign in</a>
-            {% endif %}
+            <div id="id_auth_block">
+                {% if user.email %}
+                    <ul class="nav navbar-nav">
+                        <li><a href="{% url 'lists:my_lists' user.email %}">My lists</a></li>
+                    </ul>
+                    <a class="btn navbar-btn navbar-right" id="id_logout" href="{% url 'accounts:logout' %}">Log out</a>
+                    <span class="navbar-text navbar-right">Logged in as {{ user.email }}</span>
+                {% else %}
+                    <a class="btn navbar-btn navbar-right" id="id_login" href="#">Sign in</a>
+                {% endif %}
+            </div>
         </nav>
         <div class="row">
             <div class="col-md-6 col-md-offset-3 jumbotron">
