Sharing functionality and tests

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -58,6 +58,13 @@
                 {% endblock %}
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                {% block sharing %}
+                {% endblock %}
+            </div>
+        </div>
     </div>
     <script src="{% static "js/jquery.js" %}"></script>
     <script src="{% static "js/persona.js" %}"></script>
